--- a/indecision/package.json
+++ b/indecision/package.json
@@ -5,7 +5,7 @@
   "license": "MIT",
   "scripts": {
     "serve": "live-server public/",
-    "build": "webpack --mode=development",
+    "build": "webpack --mode=development --watch",
     "dev-server": "webpack-dev-server"
   },
   "dependencies": {
@@ -15,9 +15,15 @@
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-preset-env": "1.5.2",
     "babel-preset-react": "6.24.1",
+    "css-loader": "^3.1.0",
     "live-server": "^1.2.1",
+    "node-sass": "^4.12.0",
+    "normalize.css": "^8.0.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-modal": "^3.9.1",
+    "sass-loader": "^7.1.0",
+    "style-loader": "^0.23.1",
     "validator": "^11.1.0",
     "webpack": "^4.38.0",
     "webpack-cli": "^3.3.6",
